# mellowgate

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  demo_cut_relaxation.py  differentiable_discrete_decisions_tutorial.ipynb  example.py  example_cut.py  pyproject.toml  sine_cos_gradients.py  stochastic_threshold_cuts_expectation.py  tutorial_cut_relaxation.ipynb
.github/workflows/: ci.yml
learning/: sine_cos_gradients.py  stochastic_threshold_cuts.py  stochastic_threshold_cuts_expectation.py
src/mellowgate/: __init__.py  config.py
src/mellowgate/api/: __init__.py  estimators.py  experiments.py  functions.py  results.py
src/mellowgate/logging/: __init__.py  logger.py
src/mellowgate/plots/: 50s.mplstyle  __init__.py  functions.py  metrics.py
src/mellowgate/utils/: __init__.py  functions.py  outputs.py  statistics.py
tests/: __init__.py  test_estimators.py  test_experiments.py  test_functions.py  test_results.py  test_utils_functions.py  test_utils_outputs.py
tests/api/: __init__.py  test_estimators.py  test_experiments.py  test_functions.py  test_results.py
tests/logging/: __init__.py
tests/plots/: __init__.py
tests/utils/: __init__.py  test_functions.py  test_outputs.py  test_statistics.py
