[project]
authors = [{name = "maly", email = "mohamedaymanali@gmail.com"}]
dependencies = []
name = "mellowgate"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
mellowgate = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.3,<3"
matplotlib = ">=3.10.6,<4"
black = "*"
flake8 = "*"
rich = "*"
