[project]
authors = [{name = "maly", email = "mohamedaymanali@gmail.com"}]
dependencies = [
    "matplotlib>=3.10.6,<4",
]
name = "mellowgate"
requires-python = ">= 3.11,<=3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
mellowgate = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
matplotlib = ">=3.10.6,<4"
black = "*"
flake8 = "*"
rich = "*"
isort = "*"
pre-commit = "*"
pytest = ">=8.4.2,<9"
pytest-cov = "*"
jupyterlab = ">=4.4.9,<5"
jax = ">=0.7.0,<0.7.1"
flax = ">=0.10.2,<0.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=mellowgate",
    "--cov-report=term-missing",
    "--cov-fail-under=1"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.report]
omit = [
    "src/mellowgate/plots/*",
    "src/mellowgate/utils/old_style_plot.py"
]

# MyPy configuration (disabled by default)
# Uncomment when ready for type checking
# [tool.mypy]
# python_version = "3.11"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
# disallow_untyped_decorators = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_no_return = true
# warn_unreachable = true
# strict_equality = true
